--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "framer-motion": "^11.11.11",
     "globals": "^15.9.0",
+    "lucide-react": "^0.501.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
